# rust-js-ts-gen

./: Cargo.toml  LICENSE  README.md  out.ts
benches/: my_benchmark.rs
src/: data.rs  lib.rs  main.rs  toString.rs  to_string.rs  util.rs
src/data/: identifer.rs
