[package]
name = "rust_js_ts_gen"
version = "0.0.0"
authors = ["narumincho"]
edition = "2018"

description = "implementation for js-ts-code-generator by rust"
license = "MIT"
repository = "https://github.com/narumincho/rust-js-ts-gen"

[dev-dependencies]
criterion = "0.3.3"

[dependencies]

[[bench]]
name = "my_benchmark"
harness = false
